style.css
@font-face {
    font-family: GreatVibes;
    src: url(fonts/GreatVibes-Regular.ttf);
}

@font-face {
    font-family: Comfortaa;
    src: url(fonts/Comfortaa-VariableFont_wght.ttf);
}

:root {
    --color-background: #d9d9d9;
    --color-form: #ffffff;
    --color-separator: #e9ecef;
    --color-calendar: #adb5bd;
}

body {
    background-color: var(--color-background);
    font-family: Comfortaa, sans-serif;
}

h1 {
    font-family: GreatVibes, sans-serif;
}

form {
    background-color: var(--color-form);
    border-radius: 1rem;
}

.form-group:not(:last-of-type) {
    border-bottom: 1px solid var(--color-separator);
}

.form-text {
    font-size: 0.75rem;
}

.calendar-wrap {
    position: relative;
    width: 11rem;
}

#birth-date {
    font-family: 'Courier New', Courier, monospace;
    background-color: initial;
}

.bi-calendar {
    position: absolute;
    top: 0.625rem;
    right: 0.75rem;
    pointer-events: none;
    fill: var(--color-calendar);
}

.custom-colors {
    max-height: 0;
    opacity: 0;
    transition: max-height .5s ease-out, opacity .5s ease-out;
}

.custom-colors.show {
    max-height: 10rem;
    opacity: 1;
}

